# project_k_lsp

server/: Cargo.toml
server/src/: completion.rs  main.rs  semantic_tokens.rs
vscode_client/: CHANGELOG.md  README.md  package-lock.json  package.json  project-k-0.0.1.vsix
vscode_client/snippets/: project_k.code_snippets  project_k.code_snippets.json
vscode_client/src/: extension.ts
vscode_client/syntaxes/: project_k.tmLanguage.json
