[package]
name = "lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = [
    "io-std",
    "rt",
    "rt-multi-thread",
    "macros",
    "net",
] }
tokio-util = { version = "0.7", features = ["codec"] }
unicode-ident = { version = "1.0.18" }
tower-lsp = { package = "deno_tower_lsp", version = "=0.4.3", features = [
    "proposed",
] }
parking_lot = "0.12.3"
parser = { path = "../../project_k/parser" }
span = { path = "../../project_k/span" }
